Add support for elquery-innertext
A recursive function to retrieve all text out of a given node and its children.

--- a/test/test.html
+++ b/test/test.html
@@ -17,5 +17,11 @@
         <button id="color-submit-button" type="submit">Submit</button>
       </form>
     </section>
+    <section class="multiline-section">
+      <p class='e'>
+        Hello World!
+        <code>ExtraCode <p class='d'> Special P</p></code>
+      </p>
+    </section>
   </body>
 </html>
