Add elquery-full-text, tests for elquery-*-text, improve docs

--- a/test/test.html
+++ b/test/test.html
@@ -17,5 +17,14 @@
         <button id="color-submit-button" type="submit">Submit</button>
       </form>
     </section>
+
+    <section class="article-section">
+      <article>
+        <h1>
+          Elquery's advanced
+          <abbr title="Hypertext Markup Language">HTML</abbr>
+          manipulation takes the world by storm
+        </h1>
+    </section>
   </body>
 </html>
